--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
@@ -15,7 +15,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^2.0.1",
+    "multer": "^2.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
